--- a/resources/html.tmpl
+++ b/resources/html.tmpl
@@ -225,6 +225,7 @@
       </ul>
     </div>
 
+    {{ $topics := list }}
     <h2>TOPICS</h2>
       {{- range .Files}}
       {{$file_name := .Name}}
@@ -237,6 +238,263 @@
 
       {{- range .Messages}}
         {{ $length := len .Topic }} {{ if gt $length 0 }}
+          {{ $topics = append $topics .LongName }}
+          <div class="topicdef">
+          <h3 id="{{.FullName}}">
+              {{.LongName}}
+          </h3>
+
+          {{p .Description}}
+
+          <span class="collapse" onclick="$(this).next().toggle('slow');">show more/less</span>
+          <div class="details">
+
+          {{if .HasFields}}
+            <table class="field-table">
+              <thead>
+                <tr><td>Field</td><td>Type</td><td>Label</td><td>Description</td></tr>
+              </thead>
+              <tbody>
+                {{- range .Fields}}
+                  <tr>
+                    <td>{{.Name}}</td>
+                    <td><a href="#.{{.FullType}}">{{.LongType}}</a></td>
+                    <td>{{.Label}}</td>
+                    <td><p>{{if (index .Options "deprecated"|default false)}}<strong>Deprecated.</strong> {{- end -}}{{.Description}} {{if .DefaultValue}}Default: {{.DefaultValue}}{{- end -}}</p></td>
+                  </tr>
+                {{- end -}}
+              </tbody>
+            </table>
+              <div class="nested">
+              {{- $FullName := .FullName }}
+              {{- $FullNameA := print .FullName "." }}
+              {{- $FullNameB := print .FullName "/" }}
+              {{- range $Messages -}}
+                {{ if gt .FullName $FullNameA }}
+                  {{ if lt .FullName $FullNameB }}
+                      {{ $topics = append $topics .LongName }}
+                      <h3 id="{{.FullName}}">{{.LongName}} (message)</h3>
+                      {{p .Description}}
+                      <table class="field-table">
+                        <thead>
+                          <tr><td>Field</td><td>Type</td><td>Label</td><td>Description</td></tr>
+                        </thead>
+                        <tbody>
+                          {{- range .Fields}}
+                            <tr>
+                              <td>{{.Name}}</td>
+                              <td><a href="#.{{.FullType}}">{{.LongType}}</a></td>
+                              <td>{{.Label}}</td>
+                              <td><p>{{if (index .Options "deprecated"|default false)}}<strong>Deprecated.</strong> {{- end -}}{{.Description}} {{if .DefaultValue}}Default: {{.DefaultValue}}{{- end -}}</p></td>
+                            </tr>
+                          {{- end -}}
+                        </tbody>
+                      </table>
+                  {{- end -}}
+                {{- end -}}
+              {{- end -}}
+
+              {{- range $Enums -}}
+                {{ if gt .FullName $FullNameA }}
+                  {{ if lt .FullName $FullNameB }}
+                    <h3 id="{{.FullName}}">{{.LongName}} (enum)</h3>
+                    {{p .Description}}
+                    <table class="enum-table">
+                      <thead>
+                        <tr><td>Name</td><td>Number</td><td>Description</td></tr>
+                      </thead>
+                      <tbody>
+                        {{- range .Values}}
+                          <tr>
+                            <td>{{.Name}}</td>
+                            <td>{{.Number}}</td>
+                            <td><p>{{.Description}}</p></td>
+                          </tr>
+                        {{- end -}}
+                      </tbody>
+                    </table>
+                  {{- end -}}
+                {{- end -}}
+              {{- end -}}
+             </div>
+            </div>
+            </div>
+
+            {{$message := .}}
+            {{- range .FieldOptions}}
+              {{$option := .}}
+              {{if eq . "validator.field" "validate.rules" }}
+              <h4>Validated Fields</h4>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Field</td>
+                    <td>Validations</td>
+                  </tr>
+                </thead>
+                <tbody>
+                {{range $message.FieldsWithOption .}}
+                  <tr>
+                    <td>{{.Name}}</td>
+                    <td>
+                      <ul>
+                      {{range (.Option $option).Rules}}
+                        <li>{{.Name}}: {{.Value}}</li>
+                      {{- end -}}
+                      </ul>
+                    </td>
+                  </tr>
+                {{- end -}}
+                </tbody>
+              </table>
+              {{else}}
+              <h4>Fields with {{.}} option</h4>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Name</td>
+                    <td>Option</td>
+                  </tr>
+                </thead>
+                <tbody>
+                {{range $message.FieldsWithOption .}}
+                  <tr>
+                    <td>{{.Name}}</td>
+                    <td><p>{{ printf "%+v" (.Option $option)}}</p></td>
+                  </tr>
+                {{- end -}}
+                </tbody>
+              </table>
+              {{- end -}}
+            {{- end -}}
+          {{- end -}}
+        {{- end -}}
+
+        {{if .HasExtensions}}
+          <br>
+          <table class="extension-table">
+            <thead>
+              <tr><td>Extension</td><td>Type</td><td>Base</td><td>Number</td><td>Description</td></tr>
+            </thead>
+            <tbody>
+              {{range .Extensions}}
+                <tr>
+                  <td>{{.Name}}</td>
+                  <td><a href="#{{.FullType}}">{{.LongType}}</a></td>
+                  <td><a href="#{{.ContainingFullType}}">{{.ContainingLongType}}</a></td>
+                  <td>{{.Number}}</td>
+                  <td><p>{{.Description}}{{if .DefaultValue}} Default: {{.DefaultValue}}{{- end -}}</p></td>
+                </tr>
+              {{- end -}}
+            </tbody>
+          </table>
+        {{- end -}}
+      {{- end -}}
+
+      {{if .HasExtensions}}
+        <h3 id="{{$file_name}}-extensions">File-level Extensions</h3>
+        <table class="extension-table">
+          <thead>
+            <tr><td>Extension</td><td>Type</td><td>Base</td><td>Number</td><td>Description</td></tr>
+          </thead>
+          <tbody>
+            {{range .Extensions}}
+              <tr>
+                <td>{{.Name}}</td>
+                <td><a href="#{{.FullType}}">{{.LongType}}</a></td>
+                <td><a href="#{{.ContainingFullType}}">{{.ContainingLongType}}</a></td>
+                <td>{{.Number}}</td>
+                <td><p>{{.Description}}{{if .DefaultValue}} Default: {{.DefaultValue}}{{- end -}}</p></td>
+              </tr>
+            {{- end -}}
+          </tbody>
+        </table>
+      {{- end -}}
+
+      {{range .Services}}
+        <h3 id="{{.FullName}}">{{.Name}}</h3>
+        {{p .Description}}
+        <table class="enum-table">
+          <thead>
+            <tr><td>Method Name</td><td>Request Type</td><td>Response Type</td><td>Description</td></tr>
+          </thead>
+          <tbody>
+            {{range .Methods}}
+              <tr>
+                <td>{{.Name}}</td>
+                <td><a href="#{{.RequestFullType}}">{{.RequestLongType}}</a>{{if .RequestStreaming}} stream{{- end -}}</td>
+                <td><a href="#{{.ResponseFullType}}">{{.ResponseLongType}}</a>{{if .ResponseStreaming}} stream{{- end -}}</td>
+                <td><p>{{.Description}}</p></td>
+              </tr>
+            {{- end -}}
+          </tbody>
+        </table>
+
+        {{$service := .}}
+        {{- range .MethodOptions}}
+          {{$option := .}}
+          {{if eq . "google.api.http"}}
+          <h4>Methods with HTTP bindings</h4>
+          <table>
+            <thead>
+              <tr>
+                <td>Method Name</td>
+                <td>Method</td>
+                <td>Pattern</td>
+                <td>Body</td>
+              </tr>
+            </thead>
+            <tbody>
+            {{range $service.MethodsWithOption .}}
+              {{$name := .Name}}
+              {{range (.Option $option).Rules}}
+              <tr>
+                <td>{{$name}}</td>
+                <td>{{.Method}}</td>
+                <td>{{.Pattern}}</td>
+                <td>{{.Body}}</td>
+              </tr>
+              {{- end -}}
+            {{- end -}}
+            </tbody>
+          </table>
+          {{else}}
+          <h4>Methods with {{.}} option</h4>
+          <table>
+            <thead>
+              <tr>
+                <td>Method Name</td>
+                <td>Option</td>
+              </tr>
+            </thead>
+            <tbody>
+            {{range $service.MethodsWithOption .}}
+              <tr>
+                <td>{{.Name}}</td>
+                <td><p>{{ printf "%+v" (.Option $option)}}</p></td>
+              </tr>
+            {{- end -}}
+            </tbody>
+          </table>
+
+          {{- end -}}
+        {{- end -}}
+      {{- end -}}
+
+    {{- end -}}
+
+    <h2>COMMON MESSAGES</h2>
+      {{- range .Files}}
+      {{$file_name := .Name}}
+      <div class="file-heading">
+        <h2 id="{{.Name}}">{{.Name}}</h2><a href="#title">Top</a>
+      </div>
+      {{p .Description}}
+      {{ $Enums := .Enums}}
+      {{ $Messages := .Messages}}
+
+      {{- range .Messages}}
+        {{ if not (has .LongName $topics) }}
           <div class="topicdef">
           <h3 id="{{.FullName}}">
               {{.LongName}}
